--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "dependencies": {
     "@mikro-orm/core": "^5.1.3",
     "@mikro-orm/postgresql": "^5.1.3"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
