--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-server-express": "^3.7.0",
     "express": "^4.18.1",
     "graphql": "^15.8.0",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.7.0",
     "type-graphql": "^1.1.1"
   },
